--- a/pdns-admin-uwsgi/config.py.jinja2
+++ b/pdns-admin-uwsgi/config.py.jinja2
@@ -1,8 +1,8 @@
 import os
 basedir = os.path.abspath(os.path.dirname(__file__))
 
-{% for key, value in environment('PDNS_ADMIN_') %}{{ key }} = "{{ value }}"
-{% endfor %}
+{% for key, value in environment('PDNS_ADMIN_') %}
+{{ key }} = {% if key not in ('TIMEOUT','SIGNUP_ENABLED','BASIC_ENABLED','RECORDS_ALLOW_EDIT') %}"{{ value }}"{% else %}{{value}}{% endif %}{% endfor %}
 
 WTF_CSRF_ENABLED = True
 
